--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
         </div>
         <span style="margin-bottom: 15px">Select Tip %</span>
         <div class="tip-grid">
-          <button class="grid-button">5%</button>
-          <button class="grid-button">10%</button>
-          <button class="grid-button">15%</button>
-          <button class="grid-button">20%</button>
-          <button class="grid-button">25%</button>
-          <input class="grid-item custom" id="custom" placeholder="Custom"/>
+          <button class="grid-button" value="5" disabled>5%</button>
+          <button class="grid-button" value="10" disabled>10%</button>
+          <button class="grid-button" value="15" disabled>15%</button>
+          <button class="grid-button" value="20" disabled>20%</button>
+          <button class="grid-button" value="25" disabled>25%</button>
+          <input class="grid-item custom" id="custom" placeholder="Custom" disabled/>
         </div>
         <div class="people-number-block">
           <span>Number of People</span>
@@ -34,7 +34,7 @@
         </div>
         <div class="people" id="people-amount-div">
           <span>$</span>
-          <input class="bill-input" id="number-of-people" placeholder="0"/>
+          <input class="bill-input" id="number-of-people" placeholder="0" disabled/>
         </div>
       </div>
       <div class="output">
